--- a/client/src/components/course-page/s-course-page/CoursePage.css
+++ b/client/src/components/course-page/s-course-page/CoursePage.css
@@ -315,7 +315,7 @@
 .course-syllabus-accordion-container{
     display: flex;
     flex-direction: column;
-    border: 1px solid #121212;
+    border: 1px solid #e4e4e4;
     background-color: #fcfefe;
     border-radius: 16px;
 }
@@ -325,7 +325,7 @@
     display: flex;
     flex-direction: column;
     gap:1rem;
-    border-bottom:1px solid #121212 ;
+    border-bottom:1px solid #e4e4e4 ;
 }
 .course-syllabus-accordion:last-child{
     border-bottom: 0;
@@ -344,6 +344,7 @@
 .syllabus-accordion-contents p{
     font-size: 16px;
     font-weight: 400;
+    line-height: 150%;
     font-family: 'Inter',sans-serif;
     color: #313131;
 }
@@ -374,7 +375,7 @@
     display: flex;
     padding: 60px 0px;
     justify-content: center;
-    background-color: #f9f7ff;
+    background-color: #fcfefe;
   }
   .course-project-container{
     width: 80%;
@@ -390,15 +391,15 @@
     color:#121212;
   }
   .course-projects-contents{
-    display: flex; /* Change to flex */
-    flex-wrap: wrap; /* Allow items to wrap */
-    gap: 2rem;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:1.5rem;
   }
   .project-box{
-    /* flex: 1;  */
-    width: 270px;
-    height: 250px;
-    border: 1px solid #121212;
+    width: 100%;
+    max-height: 350px;
+    min-height: 250px;
+    border: 1px solid #e4e4e4;
     background-color: #fcfefe;
     border-radius: 16px;
     display: flex;
@@ -407,7 +408,7 @@
   .project-box-heading{
     border-radius: 16px;
     border: 0;
-    border-bottom: 1px solid #121212;
+    border-bottom: 1px solid #e4e4e4;
     max-height: 170px;
     overflow: hidden;
   }
@@ -440,31 +441,19 @@
   .project-view-btn:hover{
   }
   
-  @media only screen and (max-width: 1252px){
-    .project-box{
-       width: 48%;
-    }
-  }
-  @media only screen and (max-width: 1043px){
-    .project-box{
-        width: 47%; 
-      }
-  }
+ 
   
   @media only screen and (max-width: 1024px){
     .course-project-container{
       width: 80%;
       padding-left: 0;
     }
-    .project-box{
-      width: 47%; 
-    }
+    .course-projects-contents{
+        grid-template-columns: repeat(2,1fr);
+      }
+    
   }
-  @media only screen and (max-width:700px){
-    .project-box{
-        width:100% /* Set width for 1 column */
-    }
-  }
+  
   @media only screen and (max-width: 600px){
     .course-project{
         padding-top: 40px;
@@ -475,10 +464,8 @@
         gap:1.5rem;
     }
     .course-projects-contents{
+        grid-template-columns: repeat(1,1fr);
         gap:1rem;
-    }
-    .project-box{
-        width:100%  /* Set width for 1 column */
     }
   }
   
@@ -497,6 +484,7 @@
     display: flex;
     flex-direction: column;
     gap:2rem;
+   
   }
   .course-review-heading h1{
     font-size: 24px;
@@ -505,19 +493,21 @@
     color:#121212;
   }
   .course-review-contents{
-    display: flex;
-    flex-wrap: wrap;
-    gap:2rem;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:1.5rem;
   }
   .review-box{
-    width: 300px;
-    height: 300px;
-    border: 1px solid #121212;
+    width: 100%;
+    max-height: 350px;
+    min-height: 250px;
+    border: 1px solid #e4e4e4;
+    background-color: #fcfefe;
     border-radius: 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 16px;
+    padding: 24px;
     gap:2rem;
   }
   .review-box-description p{
@@ -533,31 +523,22 @@
     font-family: 'Inter',sans-serif;
     color:#121212;
   }
-  @media only screen and (max-width: 1250px){
-    
-    .review-box{
-        width:48%;
-    }
-  }
-  @media only screen and (max-width: 1047px){
-    .review-box{
-      width: 47%;
-    }
-  }
+ 
   @media only screen and (max-width:1024px){
     .course-review-container{
         padding-left: 0;
     }
-    .review-box{
-        width: 47%;
+    .course-review-contents{
+        grid-template-columns: repeat(2,1fr);
       }
+    
   }
   @media only screen and (max-width:700px){
     .review-box{
         width: 100%; /* Set width for 1 column */
     }
   }
-  @media only screen and (max-width:600px){
+  @media only screen and (max-width:620px){
     .course-review{
         padding-top: 40px;
         padding-bottom: 0;
@@ -566,9 +547,10 @@
         width: 85%;
         gap: 1.5rem;
     }
-    .course-review-contents {
+    .course-review-contents{
+        grid-template-columns: repeat(1,1fr);
         gap:1rem;
-    }
+      }
     .review-box{
         width: 100%; /* Set width for 1 column */
     }
@@ -590,33 +572,44 @@
   }
   .course-certificate-container{
     width: 80%;
-    padding-left:24px ;
     display: flex;
     flex-direction: column;
-    gap:3rem;
+   padding-left: 24px;
+
   }
   .course-certificate-heading h1{
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 600;
     font-family: 'Inter',sans-serif;
     color:#121212;
   }
   .course-certificate-contents{
-    display: flex;
-    gap:3rem;
-    justify-content: center;
-    align-items: center;
+    /* display: flex;
+    gap:3rem; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: max-content;
+    border: 1px solid #e4e4e4;
+    border-radius: 16px;
+    background-color: #fcfefe;
   }
   .course-certificate-image{
-    width:300px;
-    height: 200px;
-    border: 1px solid;
+    width:100%;
+    max-height: 350px;
+    min-height: 200px;
+  }
+  .course-certificate-image img{
+    width:100%;
+    height: 100%;
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
   }
   .course-certificate-description{
-    width: 70%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap:1.5rem;
+    padding: 24px;
   }
   .course-certificate-description p{
     width: 90%;
@@ -626,6 +619,26 @@
     font-family: 'Inter',sans-serif;
     line-height: 150%;
   }
+ 
+  @media only screen and (max-width:1024px){
+    .course-certificate-container{
+        width: 85%;
+        padding-left: 0;
+     }
+     .course-certificate-description{
+        gap:1rem;
+    }
+  }
+  @media only screen and (max-width:900px){
+    .course-certificate-contents{
+        display: flex;
+        flex-direction: column;
+    }
+    .course-certificate-image img{
+        border-radius: 16px;
+    }
+  }
+ 
   @media only screen and (max-width:600px){
     .course-certificate-container{
         padding-left: 0;
@@ -671,7 +684,7 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
-    border: 1px solid #121212;
+    border: 1px solid #e4e4e4;
     background-color: #fcfefe;
     border-radius: 16px;
     gap:1rem;
@@ -690,6 +703,8 @@
 .faq-accordion-contents p{
     font-size: 16px;
     font-weight: 400;
+    color:#313131;
+    line-height: 150%;
     font-family: 'Inter',sans-serif;
 }
 .rotated {
@@ -702,3 +717,134 @@
         padding-left: 0;
     }
   }
+
+  /* ---------------------------------------------Payment-section----------------------------------- */
+
+  .course-payment{
+    padding:60px 0px;
+    display: flex;
+    justify-content: center;
+    background-color: #f4f0ff;
+}
+.course-payment-container{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    padding-left: 24px;
+}
+.course-payment-heading h1{
+    font-size: 24px;
+    font-weight: 600;
+    font-family: 'Inter',sans-serif;
+    color:#121212;
+}
+.course-payment-contents{
+    display: flex;
+    gap:4rem;
+}
+.course-payment-box{
+    width:370px;
+    border-radius: 16px;
+    background-color: #fcfefe;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    gap:1.5rem;
+    box-shadow: 0px 0px 41px -8px rgba(213,189,255,1);
+}
+.course-payment-box hr{
+    border: 1px solid #f5f4f4;
+}
+.payment-month{
+    width: max-content;
+    padding: 8px 16px;
+    color:#121212;
+    border: 1px solid #121212;
+    border-radius: 8px;
+    font-family: 'Inter',sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+}
+.payment-starting h2{
+    font-size: 20px;
+    font-weight: 600;
+    font-family: 'Inter',sans-serif;
+    color:#121212;
+}
+.payment-starting h1{
+    padding-top: 8px;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: 'Inter',sans-serif;
+    color:#6D28D9;
+}
+.payment-points h2{
+    font-size: 16px;
+    font-weight: 600;
+    font-family: 'Inter',sans-serif;
+    color:#121212;
+}
+.payment-points li{
+    padding-top: 8px;
+    list-style-type: none;
+    line-height: 150%;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Inter',sans-serif;
+    color:#313131;
+}
+.course-payment-enroll{
+    margin-top: 24px;
+    height: min-content;
+    padding: 8px 16px;
+    border: 2px solid #6D28D9;
+    border-radius: 8px;
+    background-color: #6D28D9;
+    color: #fcfefe;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Inter',sans-serif;
+}
+.course-payment-enroll:hover{
+    background-color: #fcfefe;
+    color: #6D28D9;
+    font-weight: 500px;
+}
+.course-payment-option{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:2rem;
+}
+.payment-option-heading h1{
+    padding-top: 8px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #121212;
+    font-family: 'Inter',sans-serif;
+}
+.payment-options-container{
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+.payment-options-container{
+    display: flex;
+    flex-direction: column;
+    gap:0.5rem;
+}
+.payment-options-topic h3{
+    font-size: 16px;
+    font-weight: 500;
+    color: #121212;
+    font-family: 'Inter',sans-serif;
+}
+.payment-options-images{
+    display: flex;
+    gap:1rem;
+}
+.payment-options-images img{
+    border-radius: 8px;
+    border: 1px solid #e4e4e4;
+}
