--- a/client/src/components/common/footer/Footer.css
+++ b/client/src/components/common/footer/Footer.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     row-gap: 16px;
-    background-color: #121212;
+    background-color: #1c1623;
     padding: 16px 48px;
     padding-top:48px;
     border-top: 1px solid #322E3A; 
