--- a/client/src/components/landing-page/LandingPage.css
+++ b/client/src/components/landing-page/LandingPage.css
@@ -706,12 +706,12 @@
     background-color: #F9F9F9;
 }
 .landing-newsletter-container{
-    width: 80%;
+    width: 70%;
     padding: 56px 32px;
     border-radius: 24px;
     display: flex;
     gap:5rem;
-    background-color: #ff8787;
+    background-color: #ffc0b4;
 }
 .landing-newsletter-heading{
     width: 50%;
@@ -775,6 +775,7 @@
         padding: 60px 0px;
     }
     .landing-newsletter-container{
+        width: 85%;
         flex-direction: column;
         align-items: center;
         gap:2.5rem;
