--- a/client/src/components/landing-page/LandingPage.css
+++ b/client/src/components/landing-page/LandingPage.css
@@ -246,17 +246,16 @@
     background-color: #F9F9F9;
 }
 .landing-learning-container{
-    padding-right: 40px;
     width: 85%;
     display: flex;
-    gap:3rem;
+    gap:4rem;
     justify-content: space-between;
 }
 .landing-learning-left{
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    gap:2rem;
+    gap:1rem;
 }
 .landing-learning-left h1{
     font-size: 40px;
@@ -275,9 +274,51 @@
 .landing-learning-right{
     width: max-content;
     display: flex;
+    gap:2rem;
+    align-items: center;
+}
+.landing-learning-right-one{
+    width: 300px;
+    height: 300px;
+    display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding: 24px;
+    border: 1px solid #c1bfbf;
+    border-radius: 16px;
+    gap:2rem;
+}
+.learning-right-one-heading{
+    display: flex;
+    flex-direction: column;
     gap:1rem;
+}
+.learning-right-one-heading h1{
+    font-size: 18px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    color: #1c1623;
+}
+.learning-right-one-heading hr{
+    border: 1px solid #c1bfbf;
+}
+.learning-right-one-contents{
+    display: flex;
+    flex-direction: column;
+    gap:0.5rem;
+}
+.learning-right-one-contents li{
+    display: flex;
+    align-items: center;
+    gap:1.5rem;
+    font-size: 16px;
+    font-family: 'Inter',sans-serif;
+    color: #3f3f3f;
+    list-style-type:none ;
+    line-height: 150%;
+}
+.right-one-contents-span{
+    width: 35px;
+    height: 35px;
 }
 .learning-right-icon{
     border-radius: 100%;
@@ -285,16 +326,14 @@
     height: 32px;
     background-color: #805afd;
 }
-.landing-learning-right li{
-    display: flex;
-    align-items: center;
-    gap:1rem;
-    font-size: 16px;
-    font-family: 'Inter',sans-serif;
-    color: #3f3f3f;
-    list-style-type:none ;
+@media only screen and (max-width:1170px){
+    .landing-learning-left{
+        width: 90%;
+    }
+    .landing-learning-container{
+        flex-direction: column;
+    }
 }
-
 @media only screen and (max-width:1024px){
     .landing-learning{
         padding: 60px 0px;
@@ -316,6 +355,7 @@
 @media only screen and (max-width:800px){
     .landing-learning-container {
         flex-direction: column;
+        gap:2.5rem;
     }
     .landing-learning-left, .landing-learning-right{
         width: 100%;
@@ -334,6 +374,17 @@
     .landing-learning-left h1 {
         font-size: 24px;
         width: 100%;
+    }
+    .landing-learning-right{
+        flex-direction: column;
+        align-items: flex-start;
+        gap:1rem;
+    }
+}
+@media only screen and (max-width:400px){
+    .landing-learning-right-one {
+        width: 260px;
+        height: 260px;
     }
 }
 /* ---------------------------------------explore section----------------------------------------------------- */
@@ -707,7 +758,7 @@
 }
 .landing-newsletter-container{
     width: 70%;
-    padding: 56px 32px;
+    padding: 70px 32px;
     border-radius: 24px;
     display: flex;
     gap:5rem;
