--- a/client/src/components/landing-page/LandingPage.css
+++ b/client/src/components/landing-page/LandingPage.css
@@ -433,13 +433,13 @@
     align-items: center;
 }
 .landing-explore-ai{
-    background-color:#a1fe98;
+    background-color:#8dffae;
 }
 .landing-explore-uiux{
-    background-color:#c49afd;
+    background-color:#b9a2ff;
 }
 .landing-explore-dm{
-    background-color:#fff49f;
+    background-color:#fbfaad;
 }
 
 .landing-explore-ai h2, .landing-explore-uiux h2, .landing-explore-dm h2{
