--- a/client/src/components/course-page/course-landing-page/CourseLanding.css
+++ b/client/src/components/course-page/course-landing-page/CourseLanding.css
@@ -3,11 +3,13 @@
     padding-bottom: 60px;
     display: flex;
    justify-content: center;
+   background-color:#fdfdfd;
 }
 .course-landing-dm, .course-landing-uiux{
     padding:60px 0px;
     display: flex;
    justify-content: center;
+   background-color:#fdfdfd;
 }
 .course-landing-ai-container{
     width: 80%;
@@ -30,6 +32,7 @@
 .course-landing-ai-box{
     width: 350px;
     border:1px solid #d8d8d8;
+    background-color: #fcfefe;
     border-radius: 24px;
     height: max-content;
     display: flex;
