--- a/client/src/components/course-page/course-landing-page/CourseLanding.css
+++ b/client/src/components/course-page/course-landing-page/CourseLanding.css
@@ -1,12 +1,12 @@
-.course-landing-ai{
+.course-landing-uiux{
     padding-top: 120px;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
     display: flex;
    justify-content: center;
    background-color:#fdfdfd;
 }
-.course-landing-dm, .course-landing-uiux{
-    padding:60px 0px;
+.course-landing-dm, .course-landing-ai{
+    padding:40px 0px;
     display: flex;
    justify-content: center;
    background-color:#fdfdfd;
@@ -15,7 +15,7 @@
     width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 2rem;
 }
 .course-landing-ai-heading h1{
     padding-top: 8px;
