--- a/client/src/components/landing-page/LandingPage.css
+++ b/client/src/components/landing-page/LandingPage.css
@@ -6,9 +6,10 @@
     background-color: #1c1623;
 }
 .landing-hero-container{
-    width: 85%;
+    width: 95%;
     display: flex;
-    gap:1rem;
+    justify-content: center;
+    gap:0.5rem;
 }
 .landing-hero-left{
     width:50%;
@@ -51,15 +52,15 @@
     background-color:#fcfefe;
 }
 .landing-hero-right{
-    width: 45%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    gap:1rem;
+    gap:0.5rem;
 }
 .landing-hero-top{
     padding: 40px 24px;
     background-color: #fdfdfd;
-    border-radius: 16px;
+    border-radius: 24px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -101,10 +102,11 @@
     color: #1c1623;
     background-color: inherit;
 }
-.landing-hero-bottom{
+.landing-hero-bottom {
     display: flex;
-    gap:1rem;
     height: 100%;
+    border-radius: 24px;
+    background-color: #f7a1a1;
 }
 .landing-hero-live, .landing-hero-training, .landing-hero-placement{
     display: flex;
@@ -118,15 +120,7 @@
    border-radius: 16px;
    
 }
-.landing-hero-live{
-    background-color: #F4EFEC;
-}
-.landing-hero-training{
-    background-color:#ff96f8;
-}
-.landing-hero-placement{
-    background-color: #fef768;
-}
+
 
 .landing-hero-live p, .landing-hero-training p, .landing-hero-placement p{
     font-size: 16px;
@@ -143,7 +137,7 @@
     display: flex;
     flex-direction: column;
     gap:0.2rem;
-    border-radius: 8px;
+    border-radius: 24px;
     background-color: #64FE89;
 }
 .landing-hero-last-heading p{
@@ -239,11 +233,11 @@
 }
 
 /* -----------------------------------------------------Learning section----------------------------------------------- */
-.landing-learning{
+.landing-learning {
     padding: 90px 0px;
     display: flex;
     justify-content: center;
-    background-color: #F9F9F9;
+    background-color: #1c1623;
 }
 .landing-learning-container{
     width: 85%;
@@ -257,19 +251,19 @@
     flex-direction: column;
     gap:1rem;
 }
-.landing-learning-left h1{
+.landing-learning-left h1 {
     font-size: 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     line-height: 150%;
-    color: #1c1623;
+    color: #fcfe;
 }
-.landing-learning-left p{
+.landing-learning-left p {
     font-size: 18px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     line-height: 150%;
-    color: #3f3f3f;
+    color: #fcf8fc;
 }
 .landing-learning-right{
     width: max-content;
@@ -277,43 +271,44 @@
     gap:2rem;
     align-items: center;
 }
-.landing-learning-right-one{
+.landing-learning-right-one {
     width: 300px;
     height: 300px;
     display: flex;
     flex-direction: column;
     padding: 24px;
-    border: 1px solid #c1bfbf;
+    /* border: 1px solid #c1bfbf; */
     border-radius: 16px;
-    gap:2rem;
+    gap: 2rem;
+    background-color: #322a3b;
 }
 .learning-right-one-heading{
     display: flex;
     flex-direction: column;
     gap:1rem;
 }
-.learning-right-one-heading h1{
+.learning-right-one-heading h1 {
     font-size: 18px;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
-    color: #1c1623;
+    color: #fcf8fc;
 }
-.learning-right-one-heading hr{
-    border: 1px solid #c1bfbf;
+.learning-right-one-heading hr {
+    border: 1px solid #3e3d3d;
 }
 .learning-right-one-contents{
     display: flex;
     flex-direction: column;
     gap:0.5rem;
 }
-.learning-right-one-contents li{
+.learning-right-one-contents li {
     display: flex;
     align-items: center;
-    gap:1.5rem;
+    gap: 1.5rem;
     font-size: 16px;
-    font-family: 'Inter',sans-serif;
-    color: #3f3f3f;
-    list-style-type:none ;
+    font-family: 'Inter', sans-serif;
+    color: #fcf8fc;
+    list-style-type: none;
     line-height: 150%;
 }
 .right-one-contents-span{
@@ -392,22 +387,22 @@
 }
 /* ---------------------------------------explore section----------------------------------------------------- */
 
-.landing-explore{
+.landing-explore {
     padding: 90px 0px;
     padding-top: 40px;
     display: flex;
     justify-content: center;
-    background-color: #F9F9F9;
+    background-color: #1c1623;
 }
-.landing-explore-container{
+.landing-explore-container {
     width: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:3rem;
+    gap: 3rem;
     justify-content: space-between;
-    border: 1px solid #c1bfbf;
-    background-color: #fcfefe;
+    /* border: 1px solid #c1bfbf; */
+    background-color: #322a3b;
     border-radius: 24px;
     padding: 60px 32px;
 }
@@ -416,11 +411,11 @@
     flex-direction: column;
     gap:2rem;
 }
-.landing-explore-left h1{
+.landing-explore-left h1 {
     font-size: 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    color: #1c1623;
+    color: #ffccfc;
     line-height: 150%;
 }
 .landing-explore-right{
@@ -431,7 +426,6 @@
 .landing-explore-ai, .landing-explore-uiux, .landing-explore-dm{
     padding: 18px;
     border-radius: 16px;
-    border: 1px solid #c1bfbf;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -500,11 +494,11 @@
 
 /* ---------------------------------------optimised section------------------------------- */
 
-.landing-optimised{
+.landing-optimised {
     padding: 90px 0px;
     display: flex;
     justify-content: center;
-    background-color: #f1f1f1;
+    background-color: #1c1623;
 }
 .landing-optimised-container{
     width: 85%;
@@ -518,18 +512,18 @@
     flex-direction: column;
     gap:2rem;
 }
-.landing-optimised-left h1{
+.landing-optimised-left h1 {
     font-size: 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    color: #1c1623;
+    color: #fcf;
     line-height: 150%;
 }
-.landing-optimised-left p{
+.landing-optimised-left p {
     font-size: 18px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-    color: #3f3f3f;
+    color: #fcf8fc;
     line-height: 150%;
 }
 .landing-optimised-right{
@@ -543,12 +537,12 @@
     flex-direction: column;
     gap:2rem;
 }
-.landing-optimised-accordion-contents{
+.landing-optimised-accordion-contents {
     display: flex;
     flex-direction: column;
-    gap:1rem;
-    border: 1px solid #e4e4e4;
-    background-color: #fcfefe;
+    gap: 1rem;
+    /* border: 1px solid #e4e4e4; */
+    background-color: #322a3b;
     border-radius: 8px;
     padding: 12px 16px;
     width: 100%;
@@ -558,17 +552,21 @@
     align-items: center;
     justify-content: space-between;
 }
+.landing-accordion-heading img{
+    width: 13px;
+    height: 9px;
+}
 .landing-accordion-heading h1{
     font-size: 24px;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
-    color: #1c1623;
+    color: #fcf8fc;
     line-height: 150%;
 }
 .landing-accordion-contents{
     font-size: 16px;
     font-family: 'Inter',sans-serif;
-    color: #3f3f3f;
+    color: #fcf8fc;
     line-height: 150%;
 }
 
@@ -625,12 +623,12 @@
 }
 /* --------------------------------------------------review section----------------------------------------- */
 
-.landing-review{
+.landing-review {
     padding: 90px 0px;
     padding-top: 40px;
     display: flex;
     justify-content: center;
-    background-color: #F9F9F9;
+    background-color: #1c1623;
 }
 .landing-review-container{
     width: 85%;
@@ -644,34 +642,34 @@
     flex-direction: column;
     gap:0.5rem;
 }
-.landing-review-top h1{
+.landing-review-top h1 {
     font-size: 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    color: #1c1623;
+    color: #fcf;
     line-height: 150%;
 }
-.landing-review-top p{
+.landing-review-top p {
     font-size: 18px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-    color: #3f3f3f;
+    color: #fcf8fc;
     line-height: 150%;
 }
 .landing-review-bottom{
     display: flex;
     gap:3rem;
 }
-.landing-review-card{
+.landing-review-card {
     padding: 24px;
     width: 300px;
     height: 350px;
-    border: 1px solid #e4e4e4;
-    background-color: #fcfefe;
+    /* border: 1px solid #e4e4e4; */
+    background-color: #322a3b;
     border-radius: 16px;
     display: flex;
     flex-direction: column;
-    gap:2rem;
+    gap: 2rem;
     justify-content: space-between;
 }
 .landing-review-card img {
@@ -684,18 +682,18 @@
     flex-direction: column;
     gap:2rem;
 }
-.landing-reviews p{
-    font-size: 16px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    color: #3f3f3f;
-    line-height: 150%;
-}
-.landing-review-name h3{
+.landing-review-name h3 {
     font-size: 16px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
-    color: #1c1623;
+    color: #fcf8fc;
+    line-height: 150%;
+}
+.landing-reviews p{
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    color: #fcf8fc;
     line-height: 150%;
 }
 @media only screen and (max-width:1024px){
@@ -764,7 +762,7 @@
     padding-top: 40px;
     display: flex;
     justify-content: center;
-    background-color: #F9F9F9;
+    background-color: #1c1623;
 }
 .landing-newsletter-container{
     width: 70%;
@@ -772,7 +770,7 @@
     border-radius: 24px;
     display: flex;
     gap:5rem;
-    background-color: #ffc0b4;
+    background-color: #a685cc;
 }
 .landing-newsletter-heading{
     width: 50%;
@@ -877,11 +875,11 @@
 
 /* -------------------------------------------Better Together----------------------------------------------- */
 
-.landing-better{
+.landing-better {
     padding: 90px 0px;
     display: flex;
     justify-content: center;
-    background-color: #F9F9F9;
+    background-color: #1c1623;
 }
 .landing-better-container{
     width: 85%;
@@ -894,24 +892,24 @@
     flex-direction: column;
     gap:1rem;
 }
-.landing-better-left h3{
+.landing-better-left h3 {
     font-size: 16px;
     font-family: 'Inter', sans-serif;
     font-weight: 600;
-    color: #1c1623;
+    color: #fcf8fc;
 }
-.landing-better-left h1{
+.landing-better-left h1 {
     font-size: 32px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    color: #1c1623;
+    color: #fcf;
 }
-.landing-better-left p{
+.landing-better-left p {
     width: 80%;
     font-size: 16px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
-    color: #3f3f3f;
+    color: #fcf8fc;
     line-height: 150%;
 }
 .landing-better-right{
